...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="State" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nam-yT-nP3">
                                <rect key="frame" x="103.5" y="96" width="168" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="stateBox"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="168" id="1dx-ah-WKG"/>
                                    <constraint firstAttribute="height" constant="30" id="fgd-8D-HkO"/>
                                </constraints>
                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="City" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aby-pq-JQ2">
                                <rect key="frame" x="103.5" y="150" width="168" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="cityBox"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="168" id="JLg-A5-xjE"/>
                                    <constraint firstAttribute="height" constant="30" id="SD9-Fz-0W7"/>
                                </constraints>
                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
...
                                <rect key="frame" x="127.5" y="204" width="120" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="c9b-xZ-8F0"/>
                                    <constraint firstAttribute="width" constant="120" id="pWM-CR-2gf"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                <state key="normal" title="Get Forecast!">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="getData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6XS-XQ-tLV"/>
                                </connections>
                            </button>
...
